--- a/webroot/index.html
+++ b/webroot/index.html
@@ -50,6 +50,9 @@
         life an death</p>
       <img src="./images/image-5.png" alt>
       </article>
+      <article class="game_landing__container__article__features">
+        
+      </article>
   </main>
 </body>
 
