Modified scss and added new files

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game landing page</title>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -25,7 +26,6 @@
     </label>
     <nav class="game_landing__header__navigation">
       <ul class="game_landing__header__navigation__">
-        <li class="game_landing__header__navigation__lists"></li>
         <li class="game_landing__header__navigation__lists"><a href="#">Main</a></li>
         <li class="game_landing__header__navigation__lists"><a href="#">About</a></li>
         <li class="game_landing__header__navigation__lists"><a href="#">Game features</a></li>
@@ -179,7 +179,7 @@
     <ul class="game_landing__footer__list__social">
       <li class="game_landing__footer__list__social__link">
         <a href="#">
-          <img src="./images/facebook-1.png" alt>
+          <img src="./images/facebook.png" alt>
         </a>
       </li>
       <li class="game_landing__footer__list__social__link">
