--- a/webroot/index.html
+++ b/webroot/index.html
@@ -10,9 +10,9 @@
 
 <body>
   <header class="game_landing__header">
-    <img src="./images/game_landing_logo.png" class="game_landing__header__logo" alt>
+    <img src="./images/game_landing_log.svg" class="game_landing__header__logo" alt>
     <form action="." method="GET">
-      <label for="lang_dropdown">Language</label>
+      <label for="lang_dropdown"></label>
       <select name="lang" id="lang_dropdown">
         <option lang="en" value="en" class="game_landing__header__language_select__option" label="English">
         <option lang="ru" value="ru" class="game_landing__header__language_select__option" label="русский">
@@ -20,24 +20,30 @@
         <option lang="de" value="de" class="game_landing__header__language_select__option" label="Deutsch">
       </select>
       <button type="submit">Save</button>
+      <label for="homepage" class="game_landing__header__homepage">
+        <input type="checkbox" id="homepage" class="game_landing__header__homepage__input">
+      </label>
     </form>
-    <label for="homepage" class="game_landing__header__homepage">≡
-      <input type="checkbox" id="homepage" class="game_landing__header__homepage__input">
-    </label>
-    <nav class="game_landing__header__navigation">
-      <ul class="game_landing__header__navigation__">
-        <li class="game_landing__header__navigation__lists"><a href="#">Main</a></li>
-        <li class="game_landing__header__navigation__lists"><a href="#">About</a></li>
-        <li class="game_landing__header__navigation__lists"><a href="#">Game features</a></li>
-        <li class="game_landing__header__navigation__lists"><a href="#">System requierements</a></li>
-        <li class="game_landing__header__navigation__lists"><a href="#">Quotes</a></li>
+    <!-- <nav class="game_landing__header__menu">
+      <ul class="game_landing__header__menu__">
+        <li class="game_landing__header__menu__lists"><a href="#">Main</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#">About</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#">Game features</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#">System requierements</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#">Quotes</a></li>
       </ul>
-    </nav>
-    <h2 class="game_landing__header__title">Survive at all coats</h2>
-    <h3 class="game_landing__header___subtitle">Experience new social battle royale game</h3>
-    <div class="game_landing__header__data_store">
-      <a href="#" class="game_landing__header__data_store__list">By now on steam</a>
-      <a href="#" class="game_landing__header__data_store__list">$14.99</a>
+    </nav> -->
+    <div class="game_landing__header__store">
+      <h2 class="game_landing__header__title">Survive at all coats</h2>
+      <h4 class="game_landing__header___subtitle">Experience new social battle royale game</h4>
+      <ul class="game_landing__header___list">
+        <li><a href="#" class="game_landing__header__list__data_store">By now on steam</a></li>
+        <li><a href="#" class="game_landing__header__list__data_store">$14.99</a></li>
+      </ul>
+    </div>
+    <div class="game_landing__header__store__story">
+      <a href="#" class="game_landing__header__store__story_scroll">The story</a>
+      <a href="#"><img src="../webroot/images/banners.svg" alt=""></a>
     </div>
   </header>
 
@@ -45,7 +51,7 @@
     <article class="game_landing__container__gallery">
       <header class="game_landing__container__gallery__header">
         <h2 class="game_landing__container__gallery__header__big_title">Social battle royale game</h2>
-        <h3 class="game_landing__container__gallery__header__subtitle">What is SOS?</h3>
+        <h4 class="game_landing__container__gallery__header__subtitle">What is SOS?</h4>
       </header>
       <p class="game_landing__container__gallery__game_about">Each round, <b>you</b> and <b>15</b> other contnts compete
         to
@@ -58,7 +64,7 @@
     <article class="game_landing__container__features">
       <header class="game_landing__container__features__header">
         <h2 class="game_landing__container__features__big_title">Features</h2>
-        <h3 class="game_landing__container__features__subtitle">What’s so special?</h3>
+        <h4 class="game_landing__container__features__subtitle">What’s so special?</h4>
       </header>
       <div class="game_landing__container__features__description">
         <h3 class="game_landing__container__features__description_title">Survive at all coasts</h3>
@@ -76,7 +82,7 @@
     <article class="game_landing__container__requirements">
       <header class="game_landing__container__requirements__header">
         <h2 class="game_landing__container__requirements__header">System requirements</h2>
-        <h2 class="game_landing__container__requirements__header">Can My Computer Run this game?</h2>
+        <h4 class="game_landing__container__requirements__header">Can My Computer Run this game?</h4>
       </header>
       <nav class="game_landing__container__requirements__list">
         <ul class="game_landing__container__requirements__list__inner">
@@ -118,7 +124,7 @@
     <article class="game_landing__container__quotes">
       <header class="game_landing__container__quotes__header">
         <h2 class="game_landing__container__quotes__header__big_title">Press quotes</h2>
-        <h2 class="game_landing__container__quotes__header__subtitle">What people think?</h2>
+        <h4 class="game_landing__container__quotes__header__subtitle">What people think?</h4>
         <p class="game_landing__container__quotes__header__text">Our goal is to create a product and service that you’re
           satisfied with and use it every day. This is why we’re constantly working on our services to make it better
           every day and really listen to what our users has to say.</p>
@@ -154,7 +160,7 @@
     <article class="game_landing__container__newsletter">
       <header class="game_landing__container__newsletter__header">
         <h2 class="game_landing__container__newsletter__header__big_title">Newsletter Subscribe </h2>
-        <h3 class="game_landing__container__newsletter__header__subtitle">Want to stay in touch?</h3>
+        <h4 class="game_landing__container__newsletter__header__subtitle">Want to stay in touch?</h4>
       </header>
       <div class="game_landing__container__newsletter__div">
         <p class="game_landing__container__newsletter__div__text">In order to start receiving our news, all you have to
@@ -168,7 +174,7 @@
     </article>
   </main>
   <footer class="game_landing__footer">
-      <a href="#" class="game_landing__footer__logo"><img src="./images/game_landing_logo.png" alt></a>
+    <a href="#" class="game_landing__footer__logo"><img src="./images/game_landing_logo.png" alt></a>
     <ul class="game_landing__footer__list__about">
       <li class="game_landing__footer__list__about__game"><a href="#">Main</a></li>
       <li class="game_landing__footer__list__about__game"><a href="#">About</a></li>
@@ -179,22 +185,22 @@
     <ul class="game_landing__footer__list__social">
       <li class="game_landing__footer__list__social__link">
         <a href="#">
-          <img src="./images/facebook.png" alt>
+          <img src="./images/facebook.svg" alt>
         </a>
       </li>
       <li class="game_landing__footer__list__social__link">
         <a href="#">
-          <img src="./images/twitter.png" alt>
+          <img src="./images/twitter.svg" alt>
         </a>
       </li>
       <li class="game_landing__footer__list__social__link">
         <a href="#">
-          <img src="./images/vector.png" alt>
+          <img src="./images/vector.svg" alt>
         </a>
       </li>
       <li class="game_landing__footer__list__social__link">
         <a href="#">
-          <img src="./images/twitch.png" alt>
+          <img src="./images/twitch.svg" alt>
         </a>
       </li>
     </ul>
