Fixed gallery and header

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -21,10 +21,10 @@
         </select>
       </label>
       <label for="homepage" class="game_landing__header__homepage">
-        <span>Menu</span>
+        <input type="checkbox" name="checkbox" class="menu_dropdown">
       </label>
     </form>
-    <nav class="game_landing__header__menu">
+    <!-- <nav class="game_landing__header__menu">
       <ul class="game_landing__header__menu__">
         <li class="game_landing__header__menu__lists"><a href="#">Main</a></li>
         <li class="game_landing__header__menu__lists"><a href="#">About</a></li>
@@ -32,7 +32,7 @@
         <li class="game_landing__header__menu__lists"><a href="#">System requierements</a></li>
         <li class="game_landing__header__menu__lists"><a href="#">Quotes</a></li>
       </ul>
-    </nav>
+    </nav> -->
     <div class="game_landing__header__store">
       <h2 class="game_landing__header__title">Survive at all coats</h2>
       <h4 class="game_landing__header__subtitle">Experience new social battle royale game</h4>
@@ -52,8 +52,8 @@
   <main class="game_landing__container">
     <article class="game_landing__container__gallery">
       <header class="game_landing__container__gallery__header">
-        <h2 class="game_landing__container__gallery__header__big_title">Social battle royale game</h2>
-        <h4 class="game_landing__container__gallery__header__subtitle">What is SOS?</h4>
+        <h2 class="game_landing__container__gallery__header__subtitle">What is SOS?</h2>
+        <h4 class="game_landing__container__gallery__header__big_title">Social battle royale game</h4>
       </header>
       <p class="game_landing__container__gallery__game_about">Each round, <b>you</b> and <b>15</b> other contnts compete
         to
@@ -61,12 +61,17 @@
         form friendships with others to escape?</p>
       <p class="game_landing__container__gallery__game_about">Making the right decisions could be the difference between
         life an death</p>
-      <img src="./images/image-5.png" alt>
+        <figure class="game_landing__container__gallery__lists">
+          <img class="game_landing__container__gallery__lists-5" src="./images/image-5.png" alt>
+          <img class="game_landing__container__gallery__lists-1" src="./images/screenshot-1.png" alt>
+          <img class="game_landing__container__gallery__lists-2" src="./images/screenshot-2.png" alt>
+          <img class="game_landing__container__gallery__lists-3" src="./images/screenshot-3.png" alt>
+        </figure>
     </article>
     <article class="game_landing__container__features">
       <header class="game_landing__container__features__header">
-        <h2 class="game_landing__container__features__big_title">Features</h2>
-        <h4 class="game_landing__container__features__subtitle">What’s so special?</h4>
+        <h2 class="game_landing__container__features__subtitle">What’s so special?</h2>
+        <h4 class="game_landing__container__features__big_title">Features</h4>
       </header>
       <div class="game_landing__container__features__description">
         <h3 class="game_landing__container__features__description_title">Survive at all coasts</h3>
@@ -83,8 +88,8 @@
     </article>
     <article class="game_landing__container__requirements">
       <header class="game_landing__container__requirements__header">
-        <h2 class="game_landing__container__requirements__header">System requirements</h2>
-        <h4 class="game_landing__container__requirements__header">Can My Computer Run this game?</h4>
+        <h2 class="game_landing__container__requirements__header">Can My Computer Run this game?</h2>
+        <h4 class="game_landing__container__requirements__header">System requirements</h4>
       </header>
       <nav class="game_landing__container__requirements__list">
         <ul class="game_landing__container__requirements__list__inner">
@@ -125,8 +130,8 @@
     </article>
     <article class="game_landing__container__quotes">
       <header class="game_landing__container__quotes__header">
-        <h2 class="game_landing__container__quotes__header__big_title">Press quotes</h2>
-        <h4 class="game_landing__container__quotes__header__subtitle">What people think?</h4>
+        <h2 class="game_landing__container__quotes__header__subtitle">What people think?</h2>
+        <h4 class="game_landing__container__quotes__header__big_title">Press quotes</h4>
         <p class="game_landing__container__quotes__header__text">Our goal is to create a product and service that you’re
           satisfied with and use it every day. This is why we’re constantly working on our services to make it better
           every day and really listen to what our users has to say.</p>
@@ -161,8 +166,8 @@
     </article>
     <article class="game_landing__container__newsletter">
       <header class="game_landing__container__newsletter__header">
-        <h2 class="game_landing__container__newsletter__header__big_title">Newsletter Subscribe </h2>
-        <h4 class="game_landing__container__newsletter__header__subtitle">Want to stay in touch?</h4>
+        <h2 class="game_landing__container__newsletter__header__subtitle">Want to stay in touch?</h2>
+        <h4 class="game_landing__container__newsletter__header__big_title">Newsletter Subscribe </h4>
       </header>
       <div class="game_landing__container__newsletter__div">
         <p class="game_landing__container__newsletter__div__text">In order to start receiving our news, all you have to
