Fixed classes and label

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <input type="checkbox" name="checkbox" id="homepage" class="menu_dropdown">
   <header class="game_landing__header">
     <img src="./images/game_landing_log.svg" class="game_landing__header__logo" alt>
     <form action="." method="GET">
@@ -21,18 +22,18 @@
         </select>
       </label>
       <label for="homepage" class="game_landing__header__homepage">
-        <input type="checkbox" name="checkbox" class="menu_dropdown">
+        <span class="a11y">Open menu</span>
       </label>
     </form>
-    <!-- <nav class="game_landing__header__menu">
+    <nav class="game_landing__header__menu">
       <ul class="game_landing__header__menu__">
-        <li class="game_landing__header__menu__lists"><a href="#">Main</a></li>
-        <li class="game_landing__header__menu__lists"><a href="#">About</a></li>
-        <li class="game_landing__header__menu__lists"><a href="#">Game features</a></li>
-        <li class="game_landing__header__menu__lists"><a href="#">System requierements</a></li>
-        <li class="game_landing__header__menu__lists"><a href="#">Quotes</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">Main</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">About</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">Game features</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">System requierements</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">Quotes</a></li>
       </ul>
-    </nav> -->
+    </nav>
     <div class="game_landing__header__store">
       <h2 class="game_landing__header__title">Survive at all coats</h2>
       <h4 class="game_landing__header__subtitle">Experience new social battle royale game</h4>
