Added new files

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -27,11 +27,16 @@
     </form>
     <nav class="game_landing__header__menu">
       <ul class="game_landing__header__menu__">
-        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">Main</a></li>
-        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">About</a></li>
-        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">Game features</a></li>
-        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">System requierements</a></li>
-        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">Quotes</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#"
+            class="game_landing__header__menu__lists__links">Main</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#"
+            class="game_landing__header__menu__lists__links">About</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#" class="game_landing__header__menu__lists__links">Game
+            features</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#"
+            class="game_landing__header__menu__lists__links">System requierements</a></li>
+        <li class="game_landing__header__menu__lists"><a href="#"
+            class="game_landing__header__menu__lists__links">Quotes</a></li>
       </ul>
     </nav>
     <div class="game_landing__header__store">
@@ -62,29 +67,31 @@
         form friendships with others to escape?</p>
       <p class="game_landing__container__gallery__game_about">Making the right decisions could be the difference between
         life an death</p>
-        <figure class="game_landing__container__gallery__lists">
-          <img class="game_landing__container__gallery__lists-5" src="./images/image-5.png" alt>
-          <img class="game_landing__container__gallery__lists-1" src="./images/screenshot-1.png" alt>
-          <img class="game_landing__container__gallery__lists-2" src="./images/screenshot-2.png" alt>
-          <img class="game_landing__container__gallery__lists-3" src="./images/screenshot-3.png" alt>
-        </figure>
+      <figure class="game_landing__container__gallery__lists">
+        <img class="game_landing__container__gallery__lists-5" src="./images/image-5.png" alt>
+        <img class="game_landing__container__gallery__lists-1" src="./images/screenshot-1.png" alt>
+        <img class="game_landing__container__gallery__lists-2" src="./images/screenshot-2.png" alt>
+        <img class="game_landing__container__gallery__lists-3" src="./images/screenshot-3.png" alt>
+      </figure>
     </article>
     <article class="game_landing__container__features">
-      <header class="game_landing__container__features__header">
-        <h2 class="game_landing__container__features__subtitle">What’s so special?</h2>
-        <h4 class="game_landing__container__features__big_title">Features</h4>
-      </header>
-      <div class="game_landing__container__features__description">
-        <h3 class="game_landing__container__features__description_title">Survive at all coasts</h3>
-        <p class="game_landing__container__features__description_text">You have 30 minutes to find a relic, signal for
-          extraction, and grab
-          one of three spots on the rescue chopper.</p>
-      </div>
-      <div class="game_landing__container__features__description">
-        <h3 class="game_landing__container__features__description_title">Create allies an enemies</h3>
-      </div>
-      <div class="game_landing__container__features__description">
-        <h3 class="game_landing__container__features__description_title">Impress the audience</h3>
+      <div class="game_landing__container__features__wrapper">
+        <header class="game_landing__container__features__header">
+          <h2 class="game_landing__container__features__subtitle">What’s so special?</h2>
+          <h4 class="game_landing__container__features__big_title">Features</h4>
+        </header>
+        <div class="game_landing__container__features__description">
+          <h3 class="game_landing__container__features__description_title">Survive at all coasts</h3>
+          <p class="game_landing__container__features__description_text">You have 30 minutes to find a relic, signal for
+            extraction, and grab
+            one of three spots on the rescue chopper.</p>
+        </div>
+        <div class="game_landing__container__features__description">
+          <h3 class="game_landing__container__features__description_title">Create allies an enemies</h3>
+        </div>
+        <div class="game_landing__container__features__description">
+          <h3 class="game_landing__container__features__description_title">Impress the audience</h3>
+        </div>
       </div>
     </article>
     <article class="game_landing__container__requirements">
