Fixed gallery and classes

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -67,11 +67,11 @@
         form friendships with others to escape?</p>
       <p class="game_landing__container__gallery__game_about">Making the right decisions could be the difference between
         life an death</p>
-      <figure class="game_landing__container__gallery__lists">
-        <img class="game_landing__container__gallery__lists-5" src="./images/image-5.png" alt>
-        <img class="game_landing__container__gallery__lists-2" src="./images/screenshot-2.png" alt>
-        <img class="game_landing__container__gallery__lists-3" src="./images/screenshot-3.png" alt>
-      </figure>
+      <ul class="game_landing__container__gallery__lists">
+        <li class="game_landing__container__gallery__lists_1"><img class="game_landing__container__gallery__lists_image" src="./images/image-5.png" alt>
+        <li class="game_landing__container__gallery__lists_2"><img class="game_landing__container__gallery__lists_image" src="./images/screenshot-2.png" alt>
+        <li class="game_landing__container__gallery__lists_3"><img class="game_landing__container__gallery__list_image" src="./images/screenshot-3.png" alt>
+      </ul>
     </article>
     <article class="game_landing__container__features">
       <div class="game_landing__container__features__wrapper">
