Fixed classes and quotes form

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -68,9 +68,12 @@
       <p class="game_landing__container__gallery__game_about">Making the right decisions could be the difference between
         life an death</p>
       <ul class="game_landing__container__gallery__lists">
-        <li class="game_landing__container__gallery__lists_1"><img class="game_landing__container__gallery__lists_image" src="./images/image-5.png" alt>
-        <li class="game_landing__container__gallery__lists_2"><img class="game_landing__container__gallery__lists_image" src="./images/screenshot-2.png" alt>
-        <li class="game_landing__container__gallery__lists_3"><img class="game_landing__container__gallery__list_image" src="./images/screenshot-3.png" alt>
+        <li class="game_landing__container__gallery__lists_1"><img class="game_landing__container__gallery__lists_image"
+            src="./images/image-5.png" alt>
+        <li class="game_landing__container__gallery__lists_2"><img class="game_landing__container__gallery__lists_image"
+            src="./images/screenshot-2.png" alt>
+        <li class="game_landing__container__gallery__lists_3"><img class="game_landing__container__gallery__list_image"
+            src="./images/screenshot-3.png" alt>
       </ul>
     </article>
     <article class="game_landing__container__features">
@@ -142,32 +145,41 @@
         <p class="game_landing__container__quotes__header__text">Our goal is to create a product and service that you’re
           satisfied with and use it every day. This is why we’re constantly working on our services to make it better
           every day and really listen to what our users has to say.</p>
-        <a href="#" class="game_landing__container__quotes__header__link">Read more testemonials</a>
+        <div class="testemonials_link">
+          <a href="#" class="game_landing__container__quotes__header__link">
+            Read more testemonials
+          </a>
+        </div>
       </header>
       <nav class="game_landing__container__quotes__navigation">
         <ul class="game_landing__container__quotes__navigation__list">
-          <li class="game_landing__container__quotes__navigation__list_quote">
-            <h3>Evan Lahti</h3><span>PC Gamer</span>
+          <li class="game_landing__container__quotes__navigation__list_quote first_quote">
+            <h3>Evan Lahti</h3>
           </li>
+          <span class="job">PC Gamer</span>
           <li class="game_landing__container__quotes__navigation__list_quote">“One of my gaming highlights of the
-            year.”<span>October 18, 2018</span></li>
+            year.”
+          </li>
+          <span class="date">October 18, 2018</span>
         </ul>
         <ul class="game_landing__container__quotes__navigation__list">
-          <li class="game_landing__container__quotes__navigation__list_quote">
-            <h3>Jada Griffin </h3><span>Nerdreactor
-            </span>
+          <li class="game_landing__container__quotes__navigation__list_quote second_quote">
+            <h3>Jada Griffin</h3>
           </li>
+          <span class="job">Nerdreactor</span>
           <li class="game_landing__container__quotes__navigation__list_quote">“The next big thing in the world of
             streaming and survival games.”
-            <span>“The next big thing in the world of streaming and survival games.”
-            </span></li>
+          </li>
+          <span class="date">December 21, 2018</span>
         </ul>
         <ul class="game_landing__container__quotes__navigation__list">
-          <li class="game_landing__container__quotes__navigation__list_quote">
-            <h3>Aaron Williams</h3><span>Uproxx</span>
+          <li class="game_landing__container__quotes__navigation__list_quote third_quote">
+            <h3>Aaron Williams</h3>
           </li>
+          <span class="job">Uproxx</span>
           <li class="game_landing__container__quotes__navigation__list_quote">“Snoop Dogg Playing The Wildly
-            Entertaining ‘SOS’ Is Ridiculous.”<span>December 24, 2018</span></li>
+            Entertaining ‘SOS’ Is Ridiculous.”</li>
+          <span class="date">December 24, 2018</span>
         </ul>
       </nav>
     </article>
