--- a/webroot/index.html
+++ b/webroot/index.html
@@ -192,11 +192,11 @@
         <p class="game_landing__container__newsletter__div__text">In order to start receiving our news, all you have to
           do is enter your email address. Everything else will be taken care of by us. We will send you emails
           containing information about game. We don’t spam.</p>
-        <form class="game_landing__container__newsletter__div__email_form">
-          <label for="email">Your email address<input type="text" id="email"></label>
-          <button class="game_landing__container__newsletter__div__subscribe_button">Subscribe now</button>
-        </form>
       </div>
+      <form class="game_landing__container__newsletter__div__email_form">
+        <label for="email"><input type="text" id="email" placeholder="Your email address"></label>
+        <button class="game_landing__container__newsletter__div__subscribe_button">Subscribe now</button>
+      </form>
     </article>
   </main>
   <footer class="game_landing__footer">
